// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders content 1`] = `
<div>
  <Connect(ContentContainer) />
</div>
`;

exports[`render renders rotate 1`] = `
<div>
  <Rotate />
</div>
`;
